add phone numbere field and make changes in search file

--- a/pages/carousel.scss
+++ b/pages/carousel.scss
@@ -339,3 +339,10 @@
   /* end carousel */
   
   
+.PhoneInput image {
+  object-fit: cover !important;
+  height:100% !important;
+  width:100px
+
+
+}
